<resources>
    <string name="app_name">TurAppEksamenVaar2017</string>

    <string name="tittel">Turmål: </string>
    <string name="navn">Navn: </string>
    <string name="type">Type: </string>
    <string name="beskrivelse">Beskrivelse: </string>
    <string name="bilde">Bilde: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="hoyde">Høyde: </string>
    <string name="bruker">Bruker: </string>

</resources>
